--- a/css-main-pg/style.css
+++ b/css-main-pg/style.css
@@ -1,3 +1,7 @@
+
+
+
+
 @import url('reset.css');
 
 
@@ -5,7 +9,10 @@ html, body {
     scroll-behavior: smooth;
 }
 
-
+body {
+    font-family: 'Montserrat';
+    font-weight: 500;
+}
 
 /* _____________________Header_________________________________________ */
 
@@ -27,11 +34,17 @@ html, body {
 }
 
 .menu-startpage {
+    font-family: 'Ubuntu';
+    font-weight: 500;
     display: flex;
 	justify-content: center;
     font-size: 20px;
     gap: 50px;
 }
+
+/* .homeworks {
+    position: relative;
+} */
 
 .menu-startpage a {
     color: #fff;
@@ -62,13 +75,14 @@ html, body {
 }
 
 .second-ul {
+    font-family: 'Josefin Sans';
+    font-weight: 500;
 	padding: 25px 0 0;
 	position: absolute;
 	top: 100%;
-	left: 57%;
+	left: 0;
 	z-index: 1;
 	display: none;
-
 }
 
 .second-ul > li {
@@ -82,10 +96,11 @@ html, body {
 }
 
 .third-ul {
+    font-family: 'Montaga';
+    font-weight: 500;
     padding-right: 5px;
 	position: absolute;
-	top: 100%;
-    margin-top: -40px;
+	top: 0;
 	right: 100%;
 	z-index: 1;
 	display: none;
@@ -108,10 +123,6 @@ html, body {
 /* ____________________Main-section_______________________________ */
 
 
-.title-pg {
-
-}
-
 .flex-main-sec {
 	display: flex;
 	flex-wrap: nowrap;
@@ -127,8 +138,6 @@ html, body {
 	line-height: 20px;
 	margin-bottom: 40px;
     font-size: 22px;
-
-
 }
 
 .flex-main-lf h1 {
@@ -185,9 +194,6 @@ html, body {
 
 /* ___________Lesson-3_Boxing(2 pages)_______________ */
  
-html, body {
-    scroll-behavior: smooth;
-}
 
 .back-bx-2 {
     background: lightgray
@@ -303,8 +309,7 @@ Second block
     width: 600px;
     margin: 0 auto;
     position: relative;
-    font-size: 0;
-       
+    font-size: 0;      
 }
 
 .blockstyle-box-2 a {
@@ -321,9 +326,9 @@ display: block;
     background: rgba(0,0,0,0.5);
     z-index: 1;
     position: absolute;
-    top: 50px;
+    top: 50%;
     left: 0;
-    margin-top: 30px;
+    margin-top: -30px;
     font-size: 20px;
     color: lime;
     display: none;
@@ -526,7 +531,6 @@ table td {
 
 .third-box-float > div {
     width: 800px;
-
 }
 
 .third-box-float > div + div {
@@ -549,11 +553,6 @@ table td {
 
 /* Lesson-7 */
 
-/* .float {
-    background: lightblue;
-    padding: 50px 0; 
-} */
-
 .floa-a {
     background: lawngreen;
     width: 400px;
@@ -565,7 +564,6 @@ table td {
 .main-cont-b {
     width: 800px;
     float: left;
-   
 }
 
 .floa-b {
@@ -698,7 +696,6 @@ font-size: 16px;
     border: 1px solid #fff;
     border-radius: 4px;
     background: transparent;
-    
 }
 
 button {
