--- a/css-main-pg/style.css
+++ b/css-main-pg/style.css
@@ -25,12 +25,14 @@ body {
     color: #fff;
     padding: 20px;
     margin-bottom: 40px;
+    
 }
 
 .container-startpage {
     max-width: 1200px;
     margin: 0 auto;
-    position: relative;
+
+    
 }
 
 .menu-startpage {
@@ -40,6 +42,7 @@ body {
 	justify-content: center;
     font-size: 20px;
     gap: 50px;
+    
 }
 
 /* .homeworks {
@@ -51,6 +54,7 @@ body {
 	display: block;
 	text-decoration: none;
 	padding: 10px 25px;
+    
 }
 
 .menu-startpag > li {
@@ -83,12 +87,17 @@ body {
 	left: 0;
 	z-index: 1;
 	display: none;
+   
 }
 
 .second-ul > li {
 	background: #242424;
     text-align: center;
 }
+
+.second_ul > li:hover a { 
+    color: red;
+ }
 
 
 .second-ul > li:hover .third-ul {
@@ -104,7 +113,7 @@ body {
 	right: 100%;
 	z-index: 1;
 	display: none;
-
+   
 }
 
 .third-ul > li {
@@ -127,6 +136,7 @@ body {
 	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
+    
 }
 
 .flex-main-lf {
@@ -157,6 +167,26 @@ body {
     width: 100%;
     height: 100%;
 }
+
+/* .video {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.video > video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+} */
+
 /* _________________________________________________________________ */
 
 
@@ -168,6 +198,7 @@ body {
     text-align: center;
     color: #fff;
     margin-top: 50px;
+       
 }
 
 .hidden {
@@ -177,8 +208,12 @@ body {
     z-index: -1;
 }
 
-.icon {
-
+.footer-icon {
+    width: 50px;
+    height: 50px;
+    fill: cornsilk;
+    margin-left: 40px;
+    align-items: center;
 }
 
 
