--- a/css-main-pg/style.css
+++ b/css-main-pg/style.css
@@ -7,6 +7,7 @@
 
 html, body {
     scroll-behavior: smooth;
+    height: 100%;
 }
 
 body {
@@ -17,7 +18,14 @@ body {
 /* _____________________Header_________________________________________ */
 
 .wrapper-startpage {
-  background: lightcyan;
+    position: relative;
+    display: flex;
+    flex-flow: column;
+    min-height: 100%;
+}
+
+.title-pg {
+    flex: 1 1 auto;
 }
 
 .header-startpage {
@@ -95,7 +103,7 @@ body {
     text-align: center;
 }
 
-.second_ul > li:hover a { 
+.second-ul > li:hover .link { 
     color: red;
  }
 
@@ -119,6 +127,10 @@ body {
 .third-ul > li {
 	background: #242424;
     text-align: center;
+}
+
+.third-ul > li:hover a {
+    color: aqua;
 }
 
 
@@ -208,12 +220,45 @@ body {
     z-index: -1;
 }
 
+.icon-list {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+
+}
+
 .footer-icon {
     width: 50px;
     height: 50px;
-    fill: cornsilk;
-    margin-left: 40px;
-    align-items: center;
+    fill: azure;
+    display: block;
+
+}
+
+.body-startpg {
+    position: relative;
+    color: #fff;
+    height: 100%;
+}
+
+.body-startpg::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
 }
 
 
