--- a/css-main-pg/style.css
+++ b/css-main-pg/style.css
@@ -44,30 +44,34 @@ body {
 }
 
 .menu-startpage {
-    font-family: 'Ubuntu';
-    font-weight: 500;
+
     display: flex;
 	justify-content: center;
-    font-size: 20px;
+    font-size: 0;
     gap: 50px;
     
 }
+.menu-startpage span {
+    margin: 0 10px 0 10px;
+}
 
-/* .homeworks {
-    position: relative;
-} */
+
 
 .menu-startpage a {
     color: #fff;
-	display: block;
+	display: flex;
+    align-items: center;
 	text-decoration: none;
 	padding: 10px 25px;
     
 }
 
-.menu-startpag > li {
+.menu-startpage > li {
+    font-family: 'Ubuntu';
+    font-weight: 500;
+    font-size: 25px;
     text-transform: uppercase;
-	position: relative;
+
 }
 
 
@@ -86,6 +90,7 @@ body {
 	
 }
 
+
 .second-ul {
     font-family: 'Josefin Sans';
     font-weight: 500;
@@ -94,7 +99,7 @@ body {
 	top: 100%;
 	left: 0;
 	z-index: 1;
-	display: none;
+    display: none;
    
 }
 
@@ -110,6 +115,13 @@ body {
 
 .second-ul > li:hover .third-ul {
     display: block;
+}
+
+.second-ul svg {
+    width: 25px;
+    height: 25px;
+    fill: azure;
+    margin-right: 10px;
 }
 
 .third-ul {
@@ -133,6 +145,12 @@ body {
     color: aqua;
 }
 
+
+.header-icon {
+    width: 30px;
+    height: 30px;
+    fill: azure;
+}
 
 /* _______________________________________________________________ */
 
@@ -180,60 +198,6 @@ body {
     height: 100%;
 }
 
-/* .video {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: 1;
-}
-
-.video > video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
-} */
-
-/* _________________________________________________________________ */
-
-
-/* Footer */
-.footer-startpage {
-
-    padding: 20px 0;
-    background: #242424;
-    text-align: center;
-    color: #fff;
-    margin-top: 50px;
-       
-}
-
-.hidden {
-    width: 0;
-    height: 0;
-    position: absolute;
-    z-index: -1;
-}
-
-.icon-list {
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-
-}
-
-.footer-icon {
-    width: 50px;
-    height: 50px;
-    fill: azure;
-    display: block;
-
-}
 
 .body-startpg {
     position: relative;
@@ -262,6 +226,82 @@ body {
 }
 
 
+/* _________________________________________________________________ */
+
+
+/* Footer */
+
+.footer-startpage {
+
+    padding: 20px 0;
+    background: #242424;
+    text-align: center;
+    color: #fff;
+    margin-top: 50px;
+       
+}
+
+.hidden {
+    width: 0;
+    height: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+.icon-list {
+    font-size: 0;
+}
+
+.icon-list li {
+    display: inline-block;
+    font-size: 14px;
+    
+     
+}
+
+.icon-list li + li {
+    margin-left: 20px;
+}
+
+.icon-list a {
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    position: relative;
+    padding: 10px 0 10px 45px;
+}
+.icon-list span {
+    padding-left: 10px;
+}
+
+.icon-list svg {
+    width: 50px;
+    height: 50px;
+    fill: azure;
+    
+}
+
+/* .footer-icon {
+    fill: azure;
+} */
+
+
+
+
+/* .footer-icon {
+    width: 50px;
+    height: 50px;
+    fill: azure;
+    display: block;
+
+} */
+
+/* .icon-list {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+
+} */
 
 /* __________________________________________________________________ */
 
