--- a/css-main-pg/style.css
+++ b/css-main-pg/style.css
@@ -21,7 +21,8 @@ body {
     position: relative;
     display: flex;
     flex-flow: column;
-    min-height: 100%;
+    height: 100%;
+    overflow: auto;
 }
 
 .title-pg {
@@ -70,7 +71,8 @@ body {
     font-family: 'Ubuntu';
     font-weight: 500;
     font-size: 25px;
-    text-transform: uppercase;
+    text-transform: uppercase; 
+    position: relative;
 
 }
 
@@ -86,8 +88,9 @@ body {
 }
 
 .menu-startpage > li:hover .second-ul {
-	display: block;
-	
+	/* display: block; */
+	top: 100%;
+    left: 0;
 }
 
 
@@ -96,16 +99,18 @@ body {
     font-weight: 500;
 	padding: 25px 0 0;
 	position: absolute;
-	top: 100%;
-	left: 0;
+	top: -750%;
+	left: -500%;
 	z-index: 1;
-    display: none;
+    transition: all 1s cubic-bezier(.15,.26,.65,1.14);
+    /* display: none; */
    
 }
 
 .second-ul > li {
 	background: #242424;
     text-align: center;
+
 }
 
 .second-ul > li:hover .link { 
@@ -114,7 +119,9 @@ body {
 
 
 .second-ul > li:hover .third-ul {
-    display: block;
+    /* display: block; */
+    top: 0;
+    right: 0;
 }
 
 .second-ul svg {
@@ -129,10 +136,11 @@ body {
     font-weight: 500;
     padding-right: 5px;
 	position: absolute;
-	top: 0;
-	right: 100%;
+	top: 100%;
+	right: -800%;
 	z-index: 1;
-	display: none;
+    transition: all 1s cubic-bezier(.15,.26,.65,1.14);
+	/* display: none; */
    
 }
 
@@ -200,6 +208,7 @@ body {
 
 
 .body-startpg {
+    overflow: hidden;
     position: relative;
     color: #fff;
     height: 100%;
@@ -268,7 +277,7 @@ body {
     color: #fff;
     display: block;
     position: relative;
-    padding: 10px 0 10px 45px;
+    padding: 10px;
 }
 .icon-list span {
     padding-left: 10px;
@@ -281,9 +290,15 @@ body {
     
 }
 
-/* .footer-icon {
-    fill: azure;
-} */
+.footer-icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.footer-list > li a {
+    padding: 17px 0 17px 45px;
+}
 
 
 
@@ -820,6 +835,10 @@ font-size: 16px;
 }
 .menu-cards li a.active-cards {
     color: red;
+}
+
+.active-cards .header-icon {
+    fill: red;
 }
 
 .search-cards button {
