--- a/css-main-pg/style.css
+++ b/css-main-pg/style.css
@@ -93,9 +93,8 @@ body {
 }
 
 .menu-startpage > li:hover .second-ul {
-    transform: translate(0);
-	/* top: 100%;
-    left: 0; */
+    transform: scale(1);
+	opacity: 1;
 }
 
 
@@ -107,10 +106,9 @@ body {
 	/* top: -750%;
 	left: -500%; */
 	z-index: 1;
-    transform: translateY(-200%);
-    transition: all 1s cubic-bezier(.15,.26,.65,1.14);
-    /* display: none; */
-   
+    transform: scale(0);
+    transition: all .8s cubic-bezier(.15,.26,.65,1.14);
+    opacity: 0;
 }
 
 .second-ul > li {
@@ -125,8 +123,8 @@ body {
 
 
 .second-ul > li:hover .third-ul {
-    display: block;
-    transform: translateX(0);
+    transform: scale(1);
+    opacity: 1;
 }
 
 .second-ul svg {
@@ -141,11 +139,12 @@ body {
     font-weight: 500;
     padding-right: 5px;
 	position: absolute;
-	/* top: 100%;
-	right: -800%; */
+	top: 0;
+	right: 100%;
 	z-index: 1;
-    transform: translateX(1000%);
-    transition: all 1s cubic-bezier(.15,.26,.65,1.14);
+    transform: scale(0);
+    opacity: 0;
+    transition: all .8s cubic-bezier(.15,.26,.65,1.14);
 	
    
 }
@@ -328,11 +327,13 @@ body {
     white-space: nowrap;
     margin: 0 auto;
     animation: marque 10s linear infinite;
+    
 }
 
 .content + .content {
     left: 1530px;
 }
+
 
 @keyframes marque {
     to {
@@ -383,37 +384,49 @@ body {
 
 .hover-footer {
     width: 300px;
-    background: linear-gradient(to right, red, yellow);
     position: fixed;
     bottom: 0;
     right: 50px;
     transition: transform .4s linear;
     transform: translateY(calc(100% - 50px));
-    animation: hover .2s linear infinite;
 }
 
 .hover-footer:hover {
     transform: translate(0);
+
+}
+
+.hover-footer:hover .title-social {
     animation: none;
+
 }
 
 @keyframes hover {
-    0% {bottom: 0;}
-    
+    0% {transform:translateY(-2px);
+    }
+  
+    50% {transform:translateY(2px);}
+
+    75% {transform:translateY(-2px);}
+
     100% {
-      bottom: 12px;
+        transform:translateY(2px);
     }
   }
     
 
 .title-social {
     text-align: center;
-    padding: 15px 0;
+    padding: 10px 0;
     background: radial-gradient(blue, red);
     font-weight: 900;
     font-size: 30px;
+    animation: hover .2s linear infinite;
 }
 
+.hover-box {
+    background: linear-gradient(to right, red, yellow);
+}
 
 .footer-list {
    display: flex;
