--- a/Amelia/css/style.css
+++ b/Amelia/css/style.css
@@ -36,7 +36,8 @@ font-size: 18px;
 }
  
 .menu {
-	display: flex;	
+	display: flex;
+	gap: 90px;	
 }
 
 .menu a {
@@ -45,9 +46,11 @@ font-size: 18px;
 	color: inherit;
 }
 
-.menu > li + li {
-	margin-left: 90px;
+.burger {
+	display: none;
 }
+
+
 /* ____________________________________________________ */
 
 /* Amelia Flowers */
@@ -110,7 +113,7 @@ font-size: 18px;
 	max-height: 670px;
 	min-height: 670px; */
 	height: 670px;
-	flex: 0 0 540px;
+	flex: 0 0 50%;
 }
 
 .main-img img {
@@ -121,7 +124,7 @@ font-size: 18px;
 
 .about_us {
 	background: #D8D8D6;
-	padding: 120px 0;
+	margin: 120px 0;
 
 }
 
@@ -136,7 +139,7 @@ font-size: 18px;
 
 .about_us .text-about {
 	
-	width: 540px;
+	max-width: 540px;
 	line-height: 20px;
 	text-align: center;
 	margin: 0 auto;
@@ -150,12 +153,14 @@ font-size: 18px;
 .price {
 	background: #81A36B;
 	padding: 80px 0;
+	
 }
 .price-box {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	text-align: center;
+	
 	
 }
 
@@ -175,7 +180,7 @@ font-size: 18px;
 
 .how_work {
 	background: #D8D8D6;
-	padding: 120px 0 60px;
+	margin: 120px 0 60px;
 }
 
 .flex-bottom {
@@ -205,11 +210,7 @@ font-size: 18px;
 }
 
 .second-img {
-
-
-	/* width: 100%;
-    height: 100%; */
-	/* object-fit: cover; */
+	height: 100%;
 }
 
 .second-img img {
@@ -229,6 +230,7 @@ font-size: 18px;
 .our-works {
 	display: flex;
 	gap: 30px;
+
 	/* justify-content: space-between; */
 	/* flex-direction: row; */
 }
@@ -244,6 +246,7 @@ font-size: 18px;
 .card {
 background: #81A36B;
 padding: 15px;
+flex-wrap: wrap;
 flex: 1 1 33%;
 
 }
@@ -252,6 +255,14 @@ flex: 1 1 33%;
 text-align: center;
 padding: 23px 0 40px 0;
 }
+
+.card {
+	transform: translateY(25px);
+	transition: all .3s linear;
+  }
+  .card:hover {
+	transform: translate(0);
+  }
 
 .flower-card {
 
@@ -266,6 +277,7 @@ padding: 23px 0 40px 0;
 .works-img img {
 	width: 100%;
 	height: 100%;
+	object-fit: cover;
 }
 
 
@@ -276,16 +288,20 @@ padding: 23px 0 40px 0;
 }
 
 
-
-
-
-
-
-
 /* !FOOTER */
 .footer {
 	background: #81A36B;
 	padding: 60px 0;
+}
+
+.footer-logo svg {
+	transition: all .3s ease;
+
+}
+
+.footer-logo:hover {
+	transform: scale(1.1);
+	font-weight: 400;
 }
 
 .flex-conteiner {
@@ -298,6 +314,11 @@ padding: 23px 0 40px 0;
 	font-size: 25px;
 	line-height: 26px;
 	margin-bottom: 40px;
+	transition: all 0.3s ease;
+}
+
+.flex-conteiner h3:hover {
+	transform: scale(1.1);
 }
 
 .footer-contact a {
@@ -322,8 +343,468 @@ padding: 23px 0 40px 0;
 	justify-content: space-evenly;
 }
 
+.social-icons li a {
+    display: block;
+    transition: all .3s ease;
+    
+}
+.social-icons li a:hover {
+    transform: scale(1.3) rotateZ(1turn);
+}
+
 .footer-year {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
 	text-align: center;
+}
+
+.order-bt:hover {
+	animation: hover .2s linear infinite;
+}
+
+.flex-main-lf a:hover {
+	animation: hover .2s linear infinite;
+}
+
+
+@keyframes hover {
+    0% {transform:translateY(-1px);
+    }
+  
+    50% {transform:translateY(1px);}
+
+    75% {transform:translateY(-1px);}
+
+    100% {
+        transform:translateY(1px);
+    }
+  }
+
+
+
+
+
+/* ________________________________________________ */
+
+@media screen and (max-width: 1140px) {
+	body {
+		font-size: 16px;
+	}
+	.menu {
+		gap: 50px;
+	}
+	.flex-main-lf .text-amelia {
+		line-height: 18px;
+		margin-bottom: 30px;
+	}
+
+	.flex-main-lf h1 {
+		font-size: 50px;
+		line-height: 52px;
+		margin-bottom: 30px;
+	}
+	.order-bt {
+		padding: 15px 20px;
+		margin-right: 40px;
+		font-size: 16px;
+		line-height: 18px;
+	}
+	.flex-main-lf a {
+		padding: 15px 10px;
+		font-size: 16px;
+		line-height: 18px;
+	}
+	.main-img {
+		height: 450px;
+	}
+
+	.about_us {
+		margin: 100px 0;
+	}
+	.about_us h2 {
+		font-size: 28px;
+		line-height: 30px;
+		text-align: center;
+		margin-bottom: 50px;
+	}
+
+	.price {
+		padding: 50px 0;
+	
+	}
+	.content-img {
+	margin-bottom: 15px;
+	}
+	
+	.how_work {
+		margin: 70px 0 40px;
+	}	
+	.flex-main-rt .text-how_work  {
+		line-height: 18px;
+	}
+	.flex-main-rt h2 {
+		font-size: 28px;
+		line-height: 30px;
+		text-align: center;
+		margin-bottom: 50px;
+	}
+	.flex-main-rt .text-how_work {
+		line-height: 18px;
+	
+	}
+	.second-img {
+		height: 450px;
+	}
+
+	.work-text {
+		font-size: 28px;
+		line-height: 30px;
+		text-align: center;
+		margin-bottom: 60px;
+	}
+	.our-works {
+		gap: 20px;
+
+	}
+	.works-img img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+	.footer {
+		padding: 50px 0;
+	}
+
+}
+
+@media screen and (max-width: 992px) {
+	.menu {
+		gap: 20px;
+	}
+	.header-logo img {
+		width: 130px;
+		height: 34px;
+	}
+	.flex-main-lf .text-amelia {
+		line-height: 16px;
+		margin-bottom: 30px;
+	}
+
+	.flex-main-lf h1 {
+		font-size: 40px;
+		line-height: 42px;
+		margin-bottom: 22px;
+	}
+	.order-bt {
+		padding: 15px 10px;
+		margin-right: 30px;
+		font-size: 16px;
+		line-height: 16px;
+	}
+	.flex-main-lf a {
+		padding: 15px 8px;
+		font-size: 16px;
+		line-height: 16px;
+	}
+	.main-img {
+		height: 350px;
+	}
+
+	.about_us {
+		margin: 80px 0;
+	}
+
+	.about_us h2 {
+		font-size: 24px;
+		line-height: 26px;
+		text-align: center;
+		margin-bottom: 40px;
+	}
+	.about_us .text-about {
+
+		line-height: 16px;
+		text-align: center;
+		margin: 0 auto;
+		
+	}
+	.price {
+		padding: 40px 0;
+	
+	}
+	.price-box {
+		flex-wrap: wrap;
+		flex: 1 1 33%;
+		
+	}
+
+	.how_work {
+		margin: 50px 0 30px;
+	}	
+	.flex-main-rt .text-how_work  {
+		line-height: 16px;
+	}
+
+	.flex-main-rt h2 {
+		font-size: 24px;
+		line-height: 26px;
+		margin-bottom: 40px;
+	}
+	.flex-main-rt .text-how_work {
+		line-height: 16px;
+	
+	}
+	.second-img {
+		height: 350px;
+	}
+
+	.our-works-bg {
+		padding: 40px 0 90px;
+
+	}
+	.work-text {
+		font-size: 24px;
+		line-height: 26px;
+		text-align: center;
+		margin-bottom: 45px;
+	}
+	.our-works {
+		flex-wrap: wrap;
+		gap: 20px;
+
+	}
+	.card {
+		background: #81A36B;
+		padding: 15px;
+		flex: 1 1 33%%;
+		
+	}
+	.works-img img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+	.footer {
+		padding: 40px 0;
+	}
+	.flex-conteiner {
+		margin-bottom: 30px;
+	}
+	.flex-conteiner h3 {
+		font-size: 20px;
+		line-height: 22px;
+		margin-bottom: 30px;
+	}
+		
+}
+
+@media screen and (max-width: 768px) {
+	.header {
+		padding: 10px 0;
+	}
+	.header-logo img {
+		width: 100px;
+		height: 26px;
+	}
+	.menu {
+		display: none;	
+	}
+	.burger,
+	.burger::before,
+	.burger::after {
+	display: block;
+	background-color: darkgreen;
+	position: absolute;
+	height: 4px;
+	width: 30px;
+	border-radius: 2px;
+	}
+
+	.burger::before {
+	content: '';
+	margin-top: -8px;
+	}
+
+	.burger::after {
+	content: '';
+	margin-top: 8px;
+	}
+	.flex-main-sec {
+		flex-wrap: wrap;
+	}
+	.flex-main-lf {
+		margin: 0 auto;
+	}
+	.flex-main-lf .text-amelia {
+		line-height: 16px;
+		margin-bottom: 22px;
+		text-align: center;
+				
+	}
+
+	.flex-main-lf h1 {
+		font-size: 30px;
+		line-height: 32px;
+		margin: 20px;
+		text-align: center;
+	}
+	.order-bt {
+		padding: 15px 10px;
+		margin: 0 25px;
+		font-size: 12px;
+		line-height: 12px;
+		
+	}
+	.flex-main-lf a {
+		padding: 15px 8px;
+		font-size: 12px;
+		line-height: 12px;
+	}
+	.main-img {
+		height: 200px;
+		flex: 0 0 80%;
+		margin: 20px auto;
+	}
+	.main-img img {
+		
+		align-items: center;
+	}
+
+	.but-sec {
+		display: flex;
+		flex-wrap: nowrap;
+		justify-content: center;
+	}
+	.about_us {
+		margin: 40px 0;
+	}
+	.about_us h2 {
+		font-size: 20px;
+		line-height: 22px;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	.about_us .text-about {
+
+		line-height: 16px;
+		text-align: center;
+		margin: 0 auto;
+		
+	}
+
+	.price {
+		padding: 40px 0;
+
+	}
+	/* .content-img .price-text {
+		flex-wrap: wrap;
+		flex: 1 1 100%;
+	}
+	 */
+
+	
+	.how_work {
+		margin: 40px 0 20px;
+	}	
+	.flex-main-rt {
+		flex: 1 1 50%;
+		margin: 0 auto;
+		
+	}
+	.flex-main-rt .text-how_work  {
+		line-height: 16px;
+	}
+
+	.flex-main-rt h2 {
+		font-size: 20px;
+		line-height: 22px;
+		margin-bottom: 20px;
+	}
+
+	.second-img {
+		height: 200px;
+		flex: 0 0 80%;
+		margin: 20px auto;
+	}
+
+	.flex-bottom {
+		flex-wrap: wrap;
+	}
+	.our-works-bg {
+		padding: 25px 0 60px;
+
+	}
+	.work-text {
+		font-size: 20px;
+		line-height: 22px;
+		text-align: center;
+		margin-bottom: 30px;
+	}
+	.our-works {
+		flex-wrap: wrap;
+	
+
+	}
+	.card {
+		background: #81A36B;
+		padding: 15px;
+		flex: 1 1 100%;
+		
+	}
+	.works-img img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+	.footer {
+		padding: 30px 0;
+	}
+	.flex-conteiner {
+		margin-bottom: 20px;
+		flex-wrap: wrap;
+		text-align: center;
+	}
+	.flex-conteiner h3 {
+		font-size: 20px;
+		line-height: 22px;
+		margin-bottom: 15px;
+	}
+	.footer-contact {
+		margin-bottom: 20px;
+	}
+	.footer-contact ul > li + li {
+		margin-top: 10px;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.footer-logo {
+		order: 1;
+		flex: 1 1 100%;
+		text-align: center;
+		margin-bottom: 30px;
+	}
+
+	.footer-contact ul > li + li {
+		margin-top: 10px;
+	}
+
+
+	.footer-contact {
+		order: 2;
+		flex: 1 1 100%;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	.footer-social {
+		order: 3;
+		flex: 1 1 100%;
+		text-align: center;
+		margin-bottom: 30px;
+	}
+	.social-icons {
+		justify-content: center;
+		gap: 10px;
+	}
 }
