--- a/Amelia/css/style.css
+++ b/Amelia/css/style.css
@@ -108,10 +108,7 @@ font-size: 18px;
 
 
 .main-img {
-	/* max-width: 540px;
-	min-width: 540px;
-	max-height: 670px;
-	min-height: 670px; */
+	
 	height: 670px;
 	flex: 0 0 50%;
 }
@@ -160,8 +157,11 @@ font-size: 18px;
 	justify-content: space-between;
 	align-items: center;
 	text-align: center;
+	gap: 15px;
 	
-	
+}
+.price-box > li img {
+	height: 116px;
 }
 
 .price-text {
@@ -171,8 +171,12 @@ font-size: 18px;
 .content-img {
 	text-align: center;
 	margin-bottom: 20px;
+	width: 100%;
+	height: 100%;
 
 }
+
+
 /* _____________________________________________________________ */
 
 	
@@ -432,6 +436,11 @@ padding: 23px 0 40px 0;
 		padding: 50px 0;
 	
 	}
+
+	.price-box > li img {
+		height: 60px;
+	}
+	
 	.content-img {
 	margin-bottom: 15px;
 	}
@@ -532,8 +541,9 @@ padding: 23px 0 40px 0;
 	
 	}
 	.price-box {
+		justify-content: center;
 		flex-wrap: wrap;
-		flex: 1 1 33%;
+		gap: 20px;
 		
 	}
 
@@ -575,8 +585,15 @@ padding: 23px 0 40px 0;
 	.card {
 		background: #81A36B;
 		padding: 15px;
-		flex: 1 1 33%%;
+		flex: 1 1 33%;
 		
+	}
+		
+	.works-img {
+		display: block;
+		margin-bottom: 15px;
+		height: 300px;
+
 	}
 	.works-img img {
 		width: 100%;
@@ -608,12 +625,42 @@ padding: 23px 0 40px 0;
 	.menu {
 		display: none;	
 	}
-	.burger,
+
+	.burger {
+		width: 30px;
+		height: 25px;
+		display: block;
+		position: relative;
+		cursor: pointer;
+	}
+	.burger::before,
+	.burger::after,
+	.burger span {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 4px;
+		background: #364f25;
+		border-radius: 2px;
+	}
+
+	.burger::after {
+		top: auto;
+		bottom: 0;
+	}
+
+	.burger span {
+		top: 50%;
+		transform: translateY(-50%);
+	}
+
+	/* .burger,
 	.burger::before,
 	.burger::after {
 	display: block;
 	background-color: darkgreen;
-	position: absolute;
 	height: 4px;
 	width: 30px;
 	border-radius: 2px;
@@ -627,7 +674,8 @@ padding: 23px 0 40px 0;
 	.burger::after {
 	content: '';
 	margin-top: 8px;
-	}
+	} */
+
 	.flex-main-sec {
 		flex-wrap: wrap;
 	}
@@ -642,8 +690,8 @@ padding: 23px 0 40px 0;
 	}
 
 	.flex-main-lf h1 {
-		font-size: 30px;
-		line-height: 32px;
+		font-size: 32px;
+		line-height: 34px;
 		margin: 20px;
 		text-align: center;
 	}
@@ -696,12 +744,21 @@ padding: 23px 0 40px 0;
 		padding: 40px 0;
 
 	}
-	/* .content-img .price-text {
-		flex-wrap: wrap;
-		flex: 1 1 100%;
-	}
-	 */
 
+	.price-box > li {
+		width: 150px;
+	}
+	.works-img {
+		display: block;
+		margin-bottom: 15px;
+		height: 250px;
+
+	}
+	.card-text {
+		text-align: center;
+		font-size: 20px;
+		padding: 23px 0 40px 0;
+		}
 	
 	.how_work {
 		margin: 40px 0 20px;
@@ -716,9 +773,11 @@ padding: 23px 0 40px 0;
 	}
 
 	.flex-main-rt h2 {
-		font-size: 20px;
-		line-height: 22px;
+		text-align: center;
+		font-size: 32px;
+		line-height: 34px;
 		margin-bottom: 20px;
+	
 	}
 
 	.second-img {
@@ -735,10 +794,10 @@ padding: 23px 0 40px 0;
 
 	}
 	.work-text {
-		font-size: 20px;
-		line-height: 22px;
+		font-size: 28px;
+		line-height: 30px;
 		text-align: center;
-		margin-bottom: 30px;
+		margin-bottom: 20px;
 	}
 	.our-works {
 		flex-wrap: wrap;
@@ -778,6 +837,45 @@ padding: 23px 0 40px 0;
 }
 
 @media screen and (max-width: 600px) {
+	
+	.flex-main-lf h1 {
+		font-size: 32px;
+		line-height: 34px;
+		margin: 20px;
+		text-align: center;
+	}
+
+	.main-img {
+		display: none;
+	}
+
+	.about_us h2 {
+		font-size: 26px;
+		line-height: 28px;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+	
+	.order-bt {
+		padding: 15px 10px;
+		margin: 0 25px;
+		font-size: 16px;
+		line-height: 18px;
+		
+	}
+	.flex-main-lf a {
+		padding: 15px 8px;
+		font-size: 16px;
+		line-height: 18px;
+	}
+
+	.card-text {
+		text-align: center;
+		font-size: 22px;
+		padding: 23px 0 40px 0;
+		}
+
+
 	.footer-logo {
 		order: 1;
 		flex: 1 1 100%;
@@ -808,3 +906,33 @@ padding: 23px 0 40px 0;
 		gap: 10px;
 	}
 }
+
+@media screen and (max-width: 380px) {
+			
+	.order-bt {
+		padding: 12px 8px;
+		margin: 0 20px;
+		font-size: 14px;
+		line-height: 16px;
+		
+	}
+	.flex-main-lf a {
+		padding: 12px 6px;
+		font-size: 14px;
+		line-height: 16px;
+	}
+	
+	.flex-main-rt h2 {
+		text-align: center;
+		font-size: 28px;
+		line-height: 30px;
+		margin-bottom: 20px;
+	
+	}
+	.work-text {
+		font-size: 24px;
+		line-height: 36px;
+		text-align: center;
+		margin-bottom: 4px;
+	}
+	}
